--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -340,7 +340,7 @@ body {
   --tw-backdrop-invert: ;
   --tw-backdrop-opacity: ;
   --tw-backdrop-saturate: ;
-  --tw-backdrop-sepia:
+  --tw-backdrop-sepia: ;
 }
 
 ::backdrop {
@@ -390,7 +390,7 @@ body {
   --tw-backdrop-invert: ;
   --tw-backdrop-opacity: ;
   --tw-backdrop-saturate: ;
-  --tw-backdrop-sepia:
+  --tw-backdrop-sepia: ;
 }
 
 .container {
